新增飞船技术、模块与库存导出入功能；支持 .tech 技术模块与库存文件格式；修复打开文件管理器默认分类无法看到所有支持格式文件的问题；优化混淆算法，支持全局混淆

--- a/NMSShipIOTool/NMSShipIOTool.csproj
+++ b/NMSShipIOTool/NMSShipIOTool.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\mapping.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="CommunityToolkit.Diagnostics" Version="8.4.0" />
     <PackageReference Include="CommunityToolkit.HighPerformance" Version="8.4.0" />
     <PackageReference Include="K4os.Compression.LZ4" Version="1.3.8" />
@@ -18,6 +22,12 @@
     <PackageReference Include="libNOM.map" Version="0.13.7" />
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="9.0.8" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\mapping.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
